--- a/DI-App/Base.lproj/Main.storyboard
+++ b/DI-App/Base.lproj/Main.storyboard
@@ -170,7 +170,7 @@
         <!--Assignments-->
         <scene sceneID="yMR-V6-Egl">
             <objects>
-                <viewController id="bpu-l0-hzM" customClass="AssignmentVC" customModule="DI_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bpu-l0-hzM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bO5-KJ-pKH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -186,7 +186,7 @@
         <!--Profile-->
         <scene sceneID="K6z-GZ-4eq">
             <objects>
-                <viewController id="BUF-LW-yI5" sceneMemberID="viewController">
+                <viewController id="BUF-LW-yI5" customClass="ProfileVC" customModule="DI_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="apB-TX-YET">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
