--- a/DI-App/Controllers/ProfileVC/ProfileVC.xib
+++ b/DI-App/Controllers/ProfileVC/ProfileVC.xib
@@ -14,7 +14,7 @@
             <connections>
                 <outlet property="mainView" destination="i5M-Pr-FkT" id="olM-Fm-BXU"/>
                 <outlet property="profilePic" destination="DU5-rr-bt6" id="ujJ-3r-uWg"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="tapImage" destination="RjP-LS-87n" id="5q9-72-24k"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -22,14 +22,29 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DU5-rr-bt6">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="instagram-icon3" translatesAutoresizingMaskIntoConstraints="NO" id="DU5-rr-bt6">
                     <rect key="frame" x="125" y="20" width="124" height="124"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <gestureRecognizers/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="124" id="ZkS-d8-ffp"/>
+                        <constraint firstAttribute="width" constant="124" id="b4W-IK-120"/>
+                    </constraints>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="RjP-LS-87n" appends="YES" id="Vnw-bO-CjZ"/>
+                    </connections>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="DU5-rr-bt6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DzG-SJ-JUt"/>
+                <constraint firstItem="DU5-rr-bt6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="tlq-W7-jdR"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
+        <tapGestureRecognizer id="RjP-LS-87n"/>
     </objects>
+    <resources>
+        <image name="instagram-icon3" width="2253" height="2253"/>
+    </resources>
 </document>
