--- a/DI-App/Base.lproj/Main.storyboard
+++ b/DI-App/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yme-Sw-Pcl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1255" y="-408"/>
+            <point key="canvasLocation" x="-1255" y="-932"/>
         </scene>
         <!--Login-->
         <scene sceneID="tne-QT-ifu">
@@ -45,7 +45,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1255" y="403"/>
+            <point key="canvasLocation" x="-1255" y="-176"/>
         </scene>
         <!--HandBook-->
         <scene sceneID="gQ4-Ba-Trg">
@@ -61,7 +61,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z5A-tD-2m0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2414" y="-555"/>
+            <point key="canvasLocation" x="4679" y="-2349"/>
         </scene>
         <!--Classes-->
         <scene sceneID="Olh-Te-X4o">
@@ -78,9 +78,6 @@
                         </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="Classes" image="icons8-ereader-100" id="4Dy-4V-y9z"/>
-                    <connections>
-                        <segue destination="ozP-7n-d1X" kind="modal" customClass="Menu" customModule="DI_App" customModuleProvider="target" id="ayf-8W-0Ck"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F8B-50-2EY" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <swipeGestureRecognizer direction="right" id="HZH-Lw-Z4P">
@@ -89,7 +86,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="2414" y="-2246"/>
+            <point key="canvasLocation" x="2414" y="-1523"/>
         </scene>
         <!--Calendar-->
         <scene sceneID="mgO-Z9-S7q">
@@ -108,9 +105,6 @@
                     <tabBarItem key="tabBarItem" title="Calendar" image="icons8-calendar-26-100" id="fjj-Dp-8LR"/>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <segue destination="ozP-7n-d1X" kind="presentation" identifier="menuSegue" customClass="Menu" customModule="DI_App" customModuleProvider="target" id="zxf-gF-eOR"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7qw-Ud-Jrf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <swipeGestureRecognizer direction="right" id="mvl-IR-s7l">
@@ -119,61 +113,12 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="2414" y="-1440"/>
-        </scene>
-        <!--Menu-->
-        <scene sceneID="GpW-FQ-wLI">
-            <objects>
-                <tableViewController wantsFullScreenLayout="YES" id="xoy-js-ybP" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" id="xT4-ki-BZM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="2FH-6H-Wz7"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="SDD-Rg-i3h">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SDD-Rg-i3h" id="NX0-9b-yAh">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="0Lh-q7-26W">
-                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0Lh-q7-26W" id="u32-ho-Ieb">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="qu2-3e-dmK">
-                                <rect key="frame" x="0.0" y="116" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qu2-3e-dmK" id="jlR-RN-r4w">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <sections/>
-                        <connections>
-                            <outlet property="dataSource" destination="xoy-js-ybP" id="dRb-xx-Zih"/>
-                            <outlet property="delegate" destination="xoy-js-ybP" id="wW1-V5-Ny2"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Menu" id="AnS-OZ-CTa"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="X3X-8Q-a8b" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5561" y="-409"/>
+            <point key="canvasLocation" x="2414" y="-874"/>
         </scene>
         <!--Side Menu Navigation Controller-->
         <scene sceneID="hsp-iq-E3O">
             <objects>
-                <navigationController storyboardIdentifier="LeftMenuNavigationController" id="ozP-7n-d1X" customClass="UISideMenuNavigationController" customModule="SideMenu" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="LeftMenuNavigationController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ozP-7n-d1X" customClass="UISideMenuNavigationController" customModule="SideMenu" sceneMemberID="viewController">
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="oSH-1k-vGC">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -183,12 +128,32 @@
                         <userDefinedRuntimeAttribute type="boolean" keyPath="leftSide" value="YES"/>
                     </userDefinedRuntimeAttributes>
                     <connections>
-                        <segue destination="xoy-js-ybP" kind="relationship" relationship="rootViewController" id="D5a-ar-3XG"/>
+                        <segue destination="xMm-a8-ZxQ" kind="relationship" relationship="rootViewController" id="uZb-6y-2Qj"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="phy-KD-A2F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4318" y="-409"/>
+            <point key="canvasLocation" x="5910" y="-555"/>
+        </scene>
+        <!--Menu-->
+        <scene sceneID="Wxj-9b-pT0">
+            <objects>
+                <viewController id="xMm-a8-ZxQ" customClass="SideMenuViewController" customModule="DI_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sDS-XE-aNi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="KRj-hh-aw7"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Menu" id="mQx-MH-upm"/>
+                    <connections>
+                        <segue destination="vaB-w5-rbj" kind="unwind" identifier="logoutSeg" unwindAction="prepareForUnwindWithSegue:" id="FFF-ZZ-SFl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JbW-sY-ULR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="vaB-w5-rbj" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="7090" y="-555"/>
         </scene>
         <!--Tab Bar-->
         <scene sceneID="WrV-3c-cXk">
@@ -211,7 +176,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Dt-OY-BOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="273" y="-26"/>
+            <point key="canvasLocation" x="4" y="-555"/>
         </scene>
         <!--Assignments-->
         <scene sceneID="yMR-V6-Egl">
@@ -225,13 +190,10 @@
                         <viewLayoutGuide key="safeArea" id="GXO-1u-Zp6"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Assignments" image="icons8-course-assign-100" id="Pek-lN-Fyl"/>
-                    <connections>
-                        <segue destination="ozP-7n-d1X" kind="modal" customClass="Menu" customModule="DI_App" customModuleProvider="target" id="olp-AW-vZJ"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UYV-74-YB6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2414" y="330"/>
+            <point key="canvasLocation" x="2414" y="-177"/>
         </scene>
         <!--Profile-->
         <scene sceneID="K6z-GZ-4eq">
@@ -245,13 +207,10 @@
                         <viewLayoutGuide key="safeArea" id="Pap-b6-yvv"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="icons8-customer-100" id="9vF-tf-Gje"/>
-                    <connections>
-                        <segue destination="ozP-7n-d1X" kind="modal" customClass="Menu" customModule="DI_App" customModuleProvider="target" id="460-sG-AbV"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="caY-j9-bwG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2414" y="1100"/>
+            <point key="canvasLocation" x="2414" y="403"/>
         </scene>
     </scenes>
     <resources>
@@ -262,6 +221,5 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Du0-oG-tFI"/>
-        <segue reference="ayf-8W-0Ck"/>
     </inferredMetricsTieBreakers>
 </document>
