--- a/DI-App/Base.lproj/Main.storyboard
+++ b/DI-App/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <segue destination="xNH-ZW-mhg" kind="show" identifier="firstSignIn" id="QW4-je-6gZ"/>
+                        <segue destination="xNH-ZW-mhg" kind="show" identifier="FirstSignIN" id="QW4-je-6gZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -89,7 +89,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="2414" y="-2246"/>
+            <point key="canvasLocation" x="2414" y="-1379"/>
         </scene>
         <!--Calendar-->
         <scene sceneID="mgO-Z9-S7q">
@@ -119,7 +119,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="2414" y="-1440"/>
+            <point key="canvasLocation" x="2414" y="-2244"/>
         </scene>
         <!--Menu-->
         <scene sceneID="GpW-FQ-wLI">
@@ -168,7 +168,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X3X-8Q-a8b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5561" y="-409"/>
+            <point key="canvasLocation" x="6967" y="-410"/>
         </scene>
         <!--Side Menu Navigation Controller-->
         <scene sceneID="hsp-iq-E3O">
@@ -188,7 +188,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="phy-KD-A2F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4318" y="-409"/>
+            <point key="canvasLocation" x="5943" y="-409"/>
         </scene>
         <!--Tab Bar-->
         <scene sceneID="WrV-3c-cXk">
@@ -262,6 +262,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Du0-oG-tFI"/>
-        <segue reference="460-sG-AbV"/>
+        <segue reference="olp-AW-vZJ"/>
     </inferredMetricsTieBreakers>
 </document>
