--- a/DI-App/Base.lproj/Main.storyboard
+++ b/DI-App/Base.lproj/Main.storyboard
@@ -61,7 +61,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z5A-tD-2m0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4679" y="-2349"/>
+            <point key="canvasLocation" x="3817" y="-2609"/>
         </scene>
         <!--Classes-->
         <scene sceneID="Olh-Te-X4o">
@@ -133,7 +133,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="phy-KD-A2F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5910" y="-555"/>
+            <point key="canvasLocation" x="3818" y="-555"/>
         </scene>
         <!--Menu-->
         <scene sceneID="Wxj-9b-pT0">
@@ -153,7 +153,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JbW-sY-ULR" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="vaB-w5-rbj" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="7090" y="-555"/>
+            <point key="canvasLocation" x="5062" y="-555"/>
         </scene>
         <!--Tab Bar-->
         <scene sceneID="WrV-3c-cXk">
@@ -220,6 +220,6 @@
         <image name="icons8-ereader-100" width="33" height="33"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="QW4-je-6gZ"/>
+        <segue reference="Du0-oG-tFI"/>
     </inferredMetricsTieBreakers>
 </document>
