--- a/DI-App/Controllers/CalendarVC/CalendarVC.xib
+++ b/DI-App/Controllers/CalendarVC/CalendarVC.xib
@@ -75,7 +75,6 @@
                         </navigationItem>
                     </items>
                 </navigationBar>
-<<<<<<< HEAD
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MJW-u2-zns" userLabel="tableViewCLasses">
                     <rect key="frame" x="0.0" y="437" width="375" height="230"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -84,8 +83,6 @@
                         <outlet property="delegate" destination="-1" id="DsK-Iw-pJC"/>
                     </connections>
                 </tableView>
-=======
->>>>>>> f60ecf75a752e06d5b1a0543bd574e7b28c3ab71
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -93,12 +90,8 @@
                 <constraint firstItem="ChP-wa-Y94" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="53" id="46y-5H-WXn"/>
                 <constraint firstItem="ChP-wa-Y94" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="4WN-jj-uBj"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="qsh-Ae-qsE" secondAttribute="trailing" constant="53" id="ExO-jt-gSF"/>
-<<<<<<< HEAD
-                <constraint firstItem="ChP-wa-Y94" firstAttribute="top" secondItem="tRO-XX-nzd" secondAttribute="bottom" constant="18" id="S9V-Hc-2VQ"/>
-=======
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="1sl-3r-AGN" secondAttribute="bottom" constant="20" id="GSB-jF-Niu"/>
                 <constraint firstItem="ChP-wa-Y94" firstAttribute="top" secondItem="tRO-XX-nzd" secondAttribute="bottom" constant="9" id="S9V-Hc-2VQ"/>
->>>>>>> f60ecf75a752e06d5b1a0543bd574e7b28c3ab71
                 <constraint firstAttribute="bottom" secondItem="qsh-Ae-qsE" secondAttribute="bottom" constant="248" id="X7M-dA-uVn"/>
                 <constraint firstItem="qsh-Ae-qsE" firstAttribute="top" secondItem="ChP-wa-Y94" secondAttribute="bottom" constant="22" id="ZQi-E1-Fza"/>
                 <constraint firstItem="MJW-u2-zns" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="eGH-QR-2vH"/>
@@ -106,9 +99,12 @@
                 <constraint firstItem="MJW-u2-zns" firstAttribute="top" secondItem="qsh-Ae-qsE" secondAttribute="bottom" constant="18" id="jVV-8a-Fm8"/>
                 <constraint firstItem="qsh-Ae-qsE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="52" id="kXY-a2-Cfg"/>
                 <constraint firstItem="qsh-Ae-qsE" firstAttribute="centerX" secondItem="tRO-XX-nzd" secondAttribute="centerX" id="lHI-rR-O8z"/>
+                <constraint firstItem="1sl-3r-AGN" firstAttribute="leading" secondItem="ChP-wa-Y94" secondAttribute="leading" id="qJh-UQ-O7w"/>
+                <constraint firstItem="1sl-3r-AGN" firstAttribute="top" secondItem="qsh-Ae-qsE" secondAttribute="bottom" constant="8" symbolic="YES" id="rRe-sx-4Y0"/>
                 <constraint firstItem="tRO-XX-nzd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="rbA-Ee-rb9"/>
                 <constraint firstItem="MJW-u2-zns" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="sAf-F0-SMN"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ChP-wa-Y94" secondAttribute="trailing" constant="16" id="t6Q-TX-axS"/>
+                <constraint firstItem="1sl-3r-AGN" firstAttribute="trailing" secondItem="ChP-wa-Y94" secondAttribute="trailing" id="xxF-V7-U2E"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="-217.5" y="-224.5"/>
