--- a/DI-App/Controllers/ProfilVC/ProfileVC.xib
+++ b/DI-App/Controllers/ProfilVC/ProfileVC.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,11 +14,11 @@
                 <outlet property="emailTxt" destination="Pvn-eH-zfw" id="vDs-j4-OSc"/>
                 <outlet property="fullNameTxt" destination="7Vx-KQ-DiR" id="gL9-MW-rIG"/>
                 <outlet property="linkedinTxt" destination="NDP-Pv-nVF" id="7vF-vN-y9R"/>
+                <outlet property="mainView" destination="i5M-Pr-FkT" id="dV1-ZT-wvV"/>
                 <outlet property="phoneNumberTxt" destination="Fok-an-V0n" id="nJb-a1-iVP"/>
                 <outlet property="profilePic" destination="DU5-rr-bt6" id="ujJ-3r-uWg"/>
                 <outlet property="sessionTxt" destination="alV-I8-Ivj" id="tsS-hG-snJ"/>
                 <outlet property="tapTheImage" destination="0tX-mP-sSP" id="l0P-cH-z8W"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="3NH-G5-fwv"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
