--- a/DI-App/Controllers/login/Login.xib
+++ b/DI-App/Controllers/login/Login.xib
@@ -136,6 +136,7 @@
                 <constraint firstItem="Zhp-op-0lo" firstAttribute="top" secondItem="FnI-jT-oFH" secondAttribute="bottom" constant="64" id="hqA-X4-8aB"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Zhp-op-0lo" secondAttribute="trailing" constant="45" id="iN7-8f-tDD"/>
                 <constraint firstItem="6Lo-Wn-YEw" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="irH-mh-geh"/>
+                <constraint firstItem="6Lo-Wn-YEw" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="jHJ-cn-RvB"/>
                 <constraint firstItem="Zhp-op-0lo" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="jpl-cr-WWy"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="mYL-BC-8ha" secondAttribute="trailing" constant="16" id="mcA-kY-GZg"/>
                 <constraint firstItem="Zhp-op-0lo" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="md6-72-HKS"/>
